syntax = "proto3";

package oxg.secrets;

option go_package = "github.com/RowanDark/0xgen/proto/oxg;oxg";

message SecretAccessRequest {
  string plugin_name = 1;
  string token = 2;
  string secret_name = 3;
  string scope_id = 4;
}

message SecretAccessResponse {
  string value = 1;
}

service SecretsBroker {
  rpc GetSecret(SecretAccessRequest) returns (SecretAccessResponse);
}
